Fixed safari stretching bug

--- a/src/style/CampaignPage.less
+++ b/src/style/CampaignPage.less
@@ -290,6 +290,7 @@ body {
 			}
 			.charity-quote-logo {
 				display: flex;
+				align-items: flex-start;
 				justify-content: flex-end;
 				img {
 					max-height: 150px;
